[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["import_janitor"]

[project]
name = "import-janitor"
version = "0.1.0"
description = "An opinionated tool to clean up and optimize Python imports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "libcst>=1.8.6",
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
    "ruff>=0.14.9",
]

[project.scripts]
import-janitor = "import_janitor.cli:main"
