[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["import_janitor"]

[project]
name = "import-janitor"
version = "0.1.0"
description = "An opinionated tool to clean up and optimize Python imports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.3.1",
    "libcst>=1.8.6",
    "msgspec>=0.20.0",
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "isort>=7.0.0",
    "black>=26.1.0",
]

[project.scripts]
import-janitor = "import_janitor.cli:main"
